# dockerized-claude-code

./: .gitignore  Cargo.toml  Dockerfile  README.md  claude-sandbox.sh
src/: main.rs
